# Kernel

./: Cargo.toml  Justfile
bootloader/limine/: Cargo.toml
bootloader/limine/src/: acpi.rs  framebuffer.rs  main.rs  memory_map.rs  stack.rs
bootloader/rust/: Cargo.toml  boot.json  build.rs  linker.ld
bootloader/rust/src/: acpi.rs  framebuffer.rs  main.rs  memory.rs  stack.rs
crates/interface/: Cargo.toml
crates/interface/src/: framebuffer.rs  lib.rs  link.rs  memory.rs  stack.rs
crates/macros/: Cargo.toml
crates/macros/src/: init.rs  lib.rs  runner.rs
crates/macros/src/config/: file.rs  input.rs  mod.rs  resolver.rs
modules/acpi/: Cargo.toml
modules/acpi/src/: lib.rs
modules/logging/: Cargo.toml  Config.toml
modules/logging/src/: framebuffer.rs  lib.rs  terminal.rs  theme.rs
xtask/: Cargo.toml
xtask/src/: arguments.rs  license.rs  main.rs  utils.rs
xtask/src/dependencies/: download.rs  git.rs  hooks.rs  manager.rs  mod.rs  predefined.rs  rust.rs
xtask/src/iso/: limine.rs  mod.rs
xtask/src/run/: limine.rs  mod.rs  rust.rs
