[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
log = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.3"
color-eyre = "0.6"
xshell = "0.2"
serde_json = "1.0"
ureq = "2.8"
ignore = "0.4"
open = "5.1.3"
cargo_metadata = "0.18.1"
