[package]
name = "acpi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
microdragon_interface = { path = "../../crates/interface" }
common = { path = "../../crates/common" }
log = { workspace = true }

[package.metadata.microdragon]
constructors = [{ path = "init", order = 1000 }]
