[package]
name = "logging"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["terminal", "serial"]
terminal = []
serial = []

[dependencies]
microdragon_interface = { path = "../../crates/interface" }
common = { path = "../../crates/common" }
log = { workspace = true }
uart_16550 = "0.3.0"
noto-sans-mono-bitmap = "0.3.0"

[package.metadata.microdragon]
constructors = [
    { path = "init", order = 100 },
    { path = "rewire", order = 1000 },
]
